# medical_mae_mixi_last

./: .envrc  Brute_force.py  cache.txt  engine_finetune.py  engine_pretrain.py  evaluate.py  main_finetune_chestxray.py  main_linprobe_chestxray.py  main_pretrain_multi_datasets_xray.py  main_pretrain_multi_datasets_xray_cnn.py  models_mae.py  models_mae_cnn.py  nb-job-pipeline.ipynb  pipeline.py  preprocess.ipynb  preprocess_script.py  processing.py  pyproject.toml  requirements.txt  requirements_processing.txt  test.py  training.ipynb  training.py  training_script.py
.ipynb_checkpoints/: Brute_force-checkpoint.py  engine_finetune-checkpoint.py  engine_pretrain-checkpoint.py  log-checkpoint.txt  main_finetune_chestxray-checkpoint.py  main_pretrain_multi_datasets_xray_cnn-checkpoint.py  models_mae_cnn-checkpoint.py
data/CheXpert-v1.0/: test.csv  test1.csv  train.csv  valid.csv
data/CheXpert-v1.0/.ipynb_checkpoints/: test-checkpoint.csv  test1-checkpoint.csv  test_sunsilk-checkpoint.csv
data_splits/chestxray/: test_official.txt  train_official.txt  val_official.txt
model/convnext_swin/: ConvSwin.py  __init__.py  convnext_swin.py
scripts/: install_apex.sh
sunsilk/model/: convnext.py  swin_transformer_v2.py
sunsilk/model/convnext_swin/: __init__.py
sunsilk/trainning/: main_finetune_chestxray.py
sunsilk/trainning/setting/: argument.py
util/: augment.py  dataloader_med.py  misc.py
util/.ipynb_checkpoints/: dataloader_med-checkpoint.py
