[project]
name = "medical_mae_pixi"
version = "0.1.0"
description = "Add a short description here"
requires-python = ">= 3.11, < 3.12"
dependencies = ["libauc"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["nvidia", "conda-forge", "pytorch", { channel = "https://repo.prefix.dev/pytorch-fixup", priority = -1 }]
platforms = ["linux-64"]

[tool.pixi.tasks]
postinstall = { cmd = "scripts/install_apex.sh", env = { APEX_REPO = "deps/apex" } }

[tool.pixi.dependencies]
pytorch = { version = "*", channel = "pytorch" }
torchvision = { version = "*", channel = "pytorch" }
scikit-learn = ">=1.4.2,<1.5"
pandas = ">=2.2.2,<2.3"
numpy = ">=1.26.4,<1.27"
py-opencv = ">=4.9.0,<4.10"
opencv = ">=4.9.0,<4.10"
pillow = ">=10.3.0,<10.4"
tensorboard = ">=2.16.2,<2.17"
matplotlib = ">=3.8.4,<3.9"
medpy = ">=0.5.1,<0.6"
tqdm = ">=4.66.4,<4.67"
pip = ">=24.0,<25"
packaging = ">=24.0,<25"
segmentation-models-pytorch = { version = ">=0.3.3,<0.4", channel = "https://repo.prefix.dev/pytorch-fixup" }
timm = ">=1.0.0,<1.1"
# medical_mae_mixi = { path = ".", editable = true }

[tool.pixi.feature.cuda]
platforms = ["linux-64"]
channels = ["nvidia", {channel = "pytorch", priority = -1}]
system-requirements = {cuda = "12.1"}

[tool.pixi.feature.cuda.dependencies]
pytorch-cuda = {version = "12.1.*", channel = "pytorch"}

[tool.pixi.feature.cpu]
platforms = ["linux-64"]

[tool.pixi.environments]
cuda = ["cuda"]
default = ["cpu"]
